refactor(backend): remove classes e elementos obsoletos
- Remove repositórios, DTOs e enums relacionados à entidade `usuario`
- Exclui métodos obsoletos do 'UsuarioRepository'
- Remove a constante `MediaType` não utilizada em `EstoqueController`
- Realiza limpeza em templates HTML, ajustando espaçamento e consistência de estilo
- Substitui lógica redundante por 'Math.clamp' em 'DashboardService' e 'PedidoController'